more on section 6 from another day

--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -8,6 +8,14 @@ It is this part of the work, bad looking and not to say (often times) crappy, wh
 
 This is also the "obscure" part, the "yin" or _"feminine"_ part of the work of discovery. The complementary aspect, the part of "clarity", or "yang" or _"masculine"_, would rather resemble work by strikes of a hammer or a weight, on a sharpened burin or on a wedge of tempered steel. [...]
 
+The second thing on which I felt a need to express myself, in my famous "introduction" both personal and "philosophical" for a mathematical text, was the subject of the nature of precisely creative work. I realized already, several years back, that this nature was generally ignored, occulted by clichés from anybody and by repressions and ancestral fears. [...]
+
+For the record, it would seem that the repression of the knowledge of this aspect or of this stage, the most crucial of all in all works of discovery (and in creative work in general), is effective to such an extent, so internalized by those who however know such work firsthand, that often one would swear that even those have eradicated every trace of their conscious memory. A little like in an utmost puritan society, a woman would have eradicated from her memory, in relation to [...]
+
+This comparison may seem excessive, and maybe it actually is, if I apply it to [...]
+
+There has been (to use an expression of C. L. Siegel<sup>98</sup>(*)) an extraordinary "flattening", a "shrinking" [...]
+
 [...]
 
 ---
