work on yinyang

--- a/recoltes-et-semailles/part-3-yinyang/6.md
+++ b/recoltes-et-semailles/part-3-yinyang/6.md
@@ -3,6 +3,31 @@
 #### a. The most "macho" art there is
 (November 5) It's been a while that I have intended to speak about yin and yang in mathematics. The two aspects of yin and yang in a mathematical work, or in an approach to mathematics, appeared to me only in the course of the reflection over the last seeks on the yin and the yang. I was planning to probe a tiny bit in these notes this double aspect, which would be the most natural way of "getting back on topic" [fr: revenir à mes moutons], in these notes which are supposed to constitute a retrospective on "the past of a mathematician".
 
+This which was clear to me from my first reflections on yin and yang (five years ago), was that "doing maths" is maybe the _most yang_, the most "masculine" among all known human activities to this day. As a matter of fact, any entirely intellectual activity, like notably the scientific research and, more generally, any activity commonly qualified as "research", is an activity with very strong predominance of yang. I was going to write: "marked by a yang imbalance", and this is indeed the case when this activity comes to absorb the near-totality of the energy of a person. This yang predominance (or imbalance) appears by the calling forth the many yin-yang couples, for which it is clear that it is the term yang especially, not to say exclusively, which is "present" in an intellectual work. I limit myself to mentioning a few, that all make part of the same "group" (or of the same "gateway to the world"), that I call the group of "the vague &mdash; the precise". (Note: in this last couple and those which follow, it is the term yin which comes first.)
+
+
+|:-------------: |:-------------:|
+| sensitivity | reason (or intellect)
+| instinct | reflection |
+| intuition | logic |
+| inspiration | method |
+| vision | coherence |
+| the concrete | the abstract |
+| the complex | the simple |
+| the vague | the precise |
+| dream | reality |
+| the indefinite | the definite |
+| the unspoken | the spoken |
+| the shapeless | the shaped |
+| the infinite | the finite |
+| the unlimited | the limited |
+| the whole (the totality) | the part |
+| the global | the local (or the fragmented) |
+
+I just went through my repertoire of yin-yang, and [...] other pairs that make felt the superyang character of this purely intellectual activity. [...] the couple of _body&ndash;spirit_.
+
+Seeing this, it seems to me like among the diverse types of intellectual activity, it is mathematical work which represents the "ultimate extreme-yang". This is no doubt due to [...] its character of extreme abstraction, the fact that it is, to a very large extent, independent of any "support" by a sensory experience and a rational obsevation of the external world, of that where I hear we live and where our bodies move. This extreme character of abstraction distinguishes mathematics from every other science, and mathematical work from every other intellectual work, by being a science or a work "of pure reason". As opposed to experimental sciences and sciences of observation it is also the only science whose results are established by _proofs_ in the most rigorous sense of the word, proceeding by a rigorously codified and in principle infallible _method_, called _"logic"_, for achieving certainties which leave no place for any doubts or reservations, or the possibility of exceptions that would have eluded all cases up until the present. All these extreme-yang features come together in mathematical work, and in this work only.
+
 [...]
 
 #### b. The beautiful stranger
