outline the remaining sections before the toc

--- a/recoltes-et-semailles/part-0-letter/13.md
+++ b/recoltes-et-semailles/part-0-letter/13.md
@@ -4,9 +4,9 @@ It is seven well-crammed months since this Letter was written, and nearly four m
 
 To accomodate my modest and very artisanal flotilla, this which seems to dominate and at a distance, it is the mi-gouailleur, mi-hargneux<sup>[translation needed]</sup> tone, to the tune of "here is Grothendieck becoming paranoid in his old age", or "here comes one who takes himself too seriously" &mdash; and the rook is played! I have not yet had a single letter in that style<sup>128</sup>(&ast;&ast;), more than two others still in that of a cosy derision and delighted with themselves<sup>129</sup>(&ast;&ast;&ast;). The majority of my mathematical recipients, among them those who were my students, have responded with silence<sup>130</sup>(&ast;&ast;&ast;&ast;) &mdash; a silence which to me says a lot.
 
+This does not prevent me from having had a voluminous correspondence. The great majority of letters are in the tone of polite embarrassment, which often wants to be amicable, as out of concern for propriety. Two or three times have I sensed, behind this embarrassment and as if filtered by him, the heat of a vivid sentiment. Most of the time, when the embarrassment does not express itself by outcries of good sentiment (on their own account, or for that of another), it is by compliments &mdash; I will never have received so much in my life!<sup>[improve wording]</sup> To the tune of "great mathematician", "superb pages" (on creativity "and all that"), "incontestable writer", and so forth. For good measure, I have even had right to a heartfelt compliment (and not an ironic one) on the richness of my interior life. Needless to say that in all these letters, my correspondent has not guarded against getting drawn into the meat of any question, let alone get involved personally<sup>[misinterpreted? negation is tricky in french...]</sup>; the tone would rather have been "seeking to offer one's opinion" (to repeat the words of one of the letters), on a matter a little scabrous and what's more, hypothetical if not imaginary, and in every case and particularly, a matter _which does not concern them personally_. When he still pretends to touch it, one of these questions, it is at your fingertips and [...]
 
-
-
+[...]
 
 <sup>127</sup>(&ast;) There are certain rare exceptions, [...]
 
