fill in some gaps just before the letter

--- a/recoltes-et-semailles/part-0-epilogue/20.md
+++ b/recoltes-et-semailles/part-0-epilogue/20.md
@@ -15,6 +15,7 @@ The new notion of space (as a sort of "generalized space", but where the points 
 
 And this "probabilistic cloud", replacing the reassuring material particles of yesteryear, remind me strangely of the elusive "open neighborhoods" that populate toposes, like evanescent ghosts, surrounding the imaginary "points", to which they continue to hang on against a rebellious imagination...
 
+---
 
 <sup>70</sup>(&ast;&ast;&ast;) This is a bit short, obviously, as a description of Einstein's idea. On the technical level, he had to bring out the structure to put on the new space-time (this was however already "in the air", with the theory of Maxwell and the ideas of Lorenz). The essential step here was not of a technical, but "philosophical" nature: to realize that the notion of simultaneity for distant events didn't have any experimental reality. It is this, the "childish assertion", the "but the emperor is naked!", that made it across the famous "imperious and invisible circle which bounds the Universe"...
 
@@ -24,11 +25,17 @@ And this "probabilistic cloud", replacing the reassuring material particles of y
 
 <sup>73</sup>(&ast;) One has dubbed "unitary theory" such a hypothetical theory, which would arrive to "unify" and conciliate the multitude of partial theories which are in question. I have a feeling that the fundamental reflection which is waiting to be undertaken, will have to take place at two different levels.
 
-1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible cercle", that has replaced the old metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of the consensus there is not obvious. There are even very serious philosophical reasons, that [...]
+1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible circle", that has replaced the old metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of this consensus is not obvious. There are even very serious philosophical reasons, which lead to calling it into question a priori, or at least, to foresee its very strict limitations. It would be now or never to subject this axiom to a close critique, and maybe even to "prove", beyond all possible doubt, that it is _not_ well-founded: that there does _not_ exist a unique rigorous mathematical model, realizing the set of phenomena called "physical" as recorded so far.
 
-2&deg;) Only _after_ such a reflection, it seems to me, does the "technical" question of bringing out an explicit model, more satisfactory than its predecessors, make complete sense. This would be the moment then, maybe, to free oneself of a second tacit axiom of the physician, going back to antiquity, this axiom, and being profoundly anchored in our mode of perception even of space: it is that of the _continuous nature_ of space and time (or of space-time), of the "place" therefore where "physical phenomena" unfold.
+Once surrounded in a satisfactory manner even the notion of "mathematical model", and that of the "validity" of such a model (within the bounds admitted to the measurements made), the question of a "unitary theory" or at least that of an "optimal model" (in a sense to be made precise) is finally found to be clearly posed. At the same time, we have no doubt a clearer idea also of the degree of arbitrariness which is attached (by necessity, maybe) to the choice of such a model.
 
-[...]
+2&deg;) Only _after_ such a reflection, it seems to me, does the "technical" question of bringing out an explicit model, more satisfactory than its predecessors, make complete sense. This would be the moment then, maybe, to free oneself of a second tacit axiom of the physicist, going back to antiquity, this axiom, and being profoundly anchored in our mode of perception even of space: it is that of the _continuous nature_ of space and time (or of space-time), of the "place" therefore where "physical phenomena" unfold.
+
+It must be fifteen or twenty years ago already, leafing through the modest volume constituting the complete works of Riemann, that I was struck by a remark by him "in passing". He observed that the ultimate structure of space may well be "discrete", and that the "continuous" representations that we make for ourselves may constitute a simplification (excessive perhaps, in the long run...) of a more complex reality; that for the human mind, "the continuum" [fr: le continu] was easier to grasp than "the discrete" [fr: le discontinu], and that it serves us, consequently, as an "approximation" for apprehending the discrete. This is a surprisingly penetrating remark in the mouth of a mathematician, at a time when the Euclidean model of physical space had still not been questioned; in a strictly logical sense, it is rather the discrete which, traditionally, has served as the technical means of approaching the continuum.
+
+The developments in mathematics over the last decades have moreover shown a much more intimate symbiosis between continuous and discrete structures, which one still didn't imagine in the first half of this century. Always [...] a "satisfactory" model (or, if necessary, a set of such models, that are "connected" in a way that is as satisfactory as possible...), that it be "continuous", "discrete" or of a "mixed" nature &mdash; such a work will surely put into play a great conceptual imagination, and an intuition consumed to apprehending and updating mathematical structures [...] new type. This sort of imagination or "intuition" [fr: flair] seems rare to me, not only among physicists (where Einstein and Schrödinger seem to have been among the rare exceptions), but also among mathematicians (and here I am talking with full knowledge of the facts).
+
+To summarize, I foresee that the expected renewal (although it has yet to come...) will rather come from a mathematician at heart, well informed of the big problems in physics, than from a physicist, But still, it will require a man having "philosophical openness" [fr: l'ouverture philosophique] to seize the crux of the problem. It is by no means of a technical nature, but rather a fundamental problem of "natural philosophy".
 
 <sup>74</sup>(&ast;) I don't pretend at all to be familiar with Einstein's work. In fact, I have not read any of his works, and don't know his ideas other than by hearsay and very approximatively. I have however the impression of discerning "the forest", even if I've never taken the effort to scrutinize any of its trees...
 
