--- a/recoltes-et-semailles/part-0-epilogue/21.md
+++ b/recoltes-et-semailles/part-0-epilogue/21.md
@@ -21,13 +21,13 @@ One may also call this the _gift of solitude_.
 
 <sup>77</sup>(&ast;) Ever since I was a kid, I was never very hooked on history (nor on geometry for that matter). (In the fifth part of Récoltes et Semailles (only partially written)<sup>[[doesn't seem to exist](https://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/Spirituality/Spirituality23.pdf)]</sup>, I have the occasion "by passing" to detect what seems to me the profound reason behind this partial "block" toward history &mdash; a block which is on its way to resorb, I believe, in recent years.) The mathematical education received by my elders, in the "Bourbakian circle", has besides not acted to settle things &mdash; the occasional historical references there were more than rare.
 
-<sup>78</sup>(&ast;) The hours after writing these lines, I was struck that I did not contemplate here the vast synthesis of contemporary mathematicians that strives to present the (collective) treatise of N. Bourbaki. (There will be more abundantly a question about the Bourbaki group in the [first part](../table-of-contents.md#part-1) of Récoltes et Semailles.) This is due, it seems to me, to two reasons:
+<sup>78</sup>(&ast;) The hours after writing these lines, I was struck that I did not contemplate here the vast synthesis of contemporary mathematicians that strive to present the (collective) treatise of N. Bourbaki. (There will be more abundantly a question about the Bourbaki group in the [first part](../table-of-contents.md#part-1) of Récoltes et Semailles.) This is due, it seems to me, to two reasons:
 
-Firstly, this synthesis is confined to a sort of "putting things in order" of a vast set of ideas and results already known, without bringing any new ideas with it. If there is a new idea, this would be that of a mathematically precise definition of the notion of "structure", which has proven to be a valuable guiding thread throughout the treatise. But this idea seems to me to rather resemble that of an intelligent and imaginative dictionary writer, than an element of renewal of a language, giving a renewed apprehension of reality (here, of the mathematical one).
+Firstly, this synthesis is confined to a sort of "putting things in order" of a vast set of ideas and results already known, without bringing any new ideas with it. If there is a new idea, this would be that of a mathematically precise definition of the notion of "structure", which has proven to be a valuable guiding thread throughout the treatise. But this idea seems to me to rather resemble that of an intelligent and imaginative dictionary writer, than an element of renewal of language, giving a renewed apprehension of reality (here, of the mathematical one).
 
-Secondly, from the fifties onward, the idea of structure is seen to be overtaken by the events, with the sudden afflux of "categorical" methods in various of the most dynamical parts of mathematics, such as topology or algebraic geometry. (Thus, the notion of "topos" refused to enter into the "Bourbakian bag" of structures, decidedly narrow at the armholes!) [...], Bourbaki renounced its initial ambition, which was to provide _the_ foundations and _the_ basic language for the set of contemporary mathematics.
+Secondly, from the fifties onward, the idea of structure saw itself overtaken by events, with the sudden afflux of "categorical" methods in various of the most dynamical parts of mathematics, such as topology or algebraic geometry. (Thus, the notion of "topos" refused to enter into the "Bourbakian bag" of structures, decidedly narrow at the armholes!) By deciding, certainly fully informed of the facts, not to engage in this "galley" [fr: galère], Bourbaki renounced its initial ambition, which was to provide _the_ foundations and _the_ basic language for the set of contemporary mathematics.
 
-It has, on the other hand, fixed a language and, at the same time, a certain _style_ of writing and of approaching mathematics. The style originally reflected (very partially) a certain _spirit_, living and a direct heritage from Hilbert. Over the fifties and sixties, the style stopped imposing itself &mdash for better or (mostly) worse. Since about twenty years, it stopped becomming a rigid _"canon"_ of a "rigor" of pure facade, and the spirit that once animated it seems to have faded away without return.
+He has, on the other hand, fixed a language and, at the same time, a certain _style_ of writing and of approaching mathematics. The style originally reflected (very partially) a certain _spirit_, living and a direct heritage from Hilbert. Over the fifties and sixties, the style stopped imposing itself &mdash for better or (mostly) worse. Since about twenty years, it stopped becomming a rigid _"canon"_ of a "rigor" of pure facade, and the spirit that once animated it seems to have faded away without return.
 
 <sup>79</sup>(&ast;) Evariste Galois (1811-1832) died in a duel, at the age of twenty-one. There are, I think, many biographies of him. I read as a young man a romanticized biography, written by the physicist Infeld, that made a big impression on me at the time.
 
@@ -35,4 +35,4 @@ It has, on the other hand, fixed a language and, at the same time, a certain _st
 
 <sup>81</sup>(&ast;&ast;&ast;) I am also persuaded that Galois would have gone much further than I have. On the one hand because of his absolutely exceptional gifts (that I haven't got a share of, for my part). On the other hand because he probably wouldn't have, like to me, let himself be distracted with the most part of his energy, on endless minor formatting tasks, bit by bit, on that which is already more or less aquired...
 
-<sup>82</sup>(&ast;) I am speaking of Claude Chevalley here and there in Récoltes et Semailles, and more specifically in the section "Rencontre avec Claude Chevalley &mdash; ou liberté et bons sentiments" (ReS I section 11), and in the note "Un adieu à Claude Chevalley" (ReS III, note n&deg; 100).
+<sup>82</sup>(&ast;) I am speaking of Claude Chevalley here and there in Récoltes et Semailles, and more specifically in the section "Rencontre avec Claude Chevalley &mdash; ou liberté et bons sentiments" ([ReS I section 11](../table-of-contents.md#rencontre-claude)), and in the note "Un adieu à Claude Chevalley" ([ReS III, note n&deg; 100](../table-of-contents.md#adieu-claude)).
