replace Récoltes et Semailles by Harvests and Sowings

--- a/recoltes-et-semailles/part-0-letter/2.md
+++ b/recoltes-et-semailles/part-0-letter/2.md
@@ -1,11 +1,11 @@
-### 2. Birth of Récoltes et Semailles (retrospective in a flash)
-In this pre-letter, I would now like to tell you in a few pages (if possible) about what the questions are in Récoltes et Semailles &mdash; to tell you in a more detailed manner that which the subtitle alone could not: "Reflections and testimony of a mathematician's past" (my past, as you'll have guessed...) There are many things in Récoltes et Semailles, and some people will without doubt see different things in it: a _voyage_ to the discoveries of a past; a _meditation_ on existence; a _tableau de mœurs_ of an environment and of an epoch (or a painting of insidious and impeccable slips from one epoch to another...); a _survey_ (almost policing at times, and at others verging on a swashbuckler novel in the sidestreets of the mathematical metropolis...); a vast _mathematical rambling_ (which will shake off more than one...); a practical treatise in applied psychoanalysis (or, if preferred, a book of "phychoanalysis fiction"); a panegyric of the _knowledge of self_; "My _confessions_"; an intimate _journal_; a psychology of _discovery and of creation_; a _formal accusation_ [fr: réquisitoire] (merciless, as it has to be...), even a _settling of accounts_ in "the high society of mathematics" (and without giving away any presents...). This much is certain, at no moment was I upset when writing, while I learned and saw all colors. If your important tasks allow you the leisure to read it, it would surprise me that you were bored by reading me. [...]
+### 2. Birth of Harvests and Sowings (retrospective in a flash)
+In this pre-letter, I would now like to tell you in a few pages (if possible) about what the questions are in Harvests and Sowings &mdash; to tell you in a more detailed manner that which the subtitle alone could not: "Reflections and testimony of a mathematician's past" (my past, as you'll have guessed...) There are many things in Harvests and Sowings, and some people will without doubt see different things in it: a _voyage_ to the discoveries of a past; a _meditation_ on existence; a _tableau de mœurs_ of an environment and of an epoch (or a painting of insidious and impeccable slips from one epoch to another...); a _survey_ (almost policing at times, and at others verging on a swashbuckler novel in the sidestreets of the mathematical metropolis...); a vast _mathematical rambling_ (which will shake off more than one...); a practical treatise in applied psychoanalysis (or, if preferred, a book of "phychoanalysis fiction"); a panegyric of the _knowledge of self_; "My _confessions_"; an intimate _journal_; a psychology of _discovery and of creation_; a _formal accusation_ [fr: réquisitoire] (merciless, as it has to be...), even a _settling of accounts_ in "the high society of mathematics" (and without giving away any presents...). This much is certain, at no moment was I upset when writing, while I learned and saw all colors. If your important tasks allow you the leisure to read it, it would surprise me that you were bored by reading me. [...]
 
-Visibly, this is not only addressed to mathematicians. It is true also that at certain moments, it is addressed more to mathematicians than to others. In this pre-letter to the "letter Récoltes et Semailles", I would like to resume and bring out especially, precisely, that which may concern you more particularly as a mathematician. The most natural, for doing this, would be recount to you simply how I have come, gradually, to write one after the other these four or five "thick books" [fr: pavés] in question.
+Visibly, this is not only addressed to mathematicians. It is true also that at certain moments, it is addressed more to mathematicians than to others. In this pre-letter to the "letter Harvests and Sowings", I would like to resume and bring out especially, precisely, that which may concern you more particularly as a mathematician. The most natural, for doing this, would be recount to you simply how I have come, gradually, to write one after the other these four or five "thick books" [fr: pavés] in question.
 
 As you know, I left "the big world" of mathematics in 1970, following a history of military funding in my institution (l'IHES). After some years of ecological and anti-military activism, in the "cultural revolution" style, of which you surely had some echo here and there, I practically disappeared from circulation, lost in a university of the province God knows where. The rumor says that I passed my time guarding sheep and drilling wells. The truth is that apart from a lot of other occupations, I went bravely, like everyone, to teach my classes at the Uni (this was my least original livelihood, and it still is today). It happened here and there, for some days, even weeks or months, to redo math [...] &mdash; I have cardboard boxes full with scribbles, that I must be alone to be able to decipher. But it was on very different things, at first sight at least, of that which I had done at the time. Between 1955 and 1970, my area of interest was cohomology, and more specifically, the cohomology of manifolds of all kinds (algebraic, in particular). I judged that I had done enough in this direction for which the others managed without me, and while at doing math, it was time for me to change the record...
 
-In 1976 appeared in my life a new passion, as strong as my mathematical passion had been long ago, and moreover closely related to it. It is the passion which I have called "meditation" (because things need names). This name, like any other name would, cannot miss to stir up innumerable misunderstandings. Like in mathematics, it's about a work of discovery. I express myself on this subject here and there throughout Récoltes et Semailles. Always is it that, visibly, there has been something to occupy me until the end of my days. And more than once, in effect, have I grown that mathematics, there was the past and that from now on, I have no longer occupied myself with very serious things &mdash; that I have "meditated".<sup>[needs some work]</sup>
+In 1976 appeared in my life a new passion, as strong as my mathematical passion had been long ago, and moreover closely related to it. It is the passion which I have called "meditation" (because things need names). This name, like any other name would, cannot miss to stir up innumerable misunderstandings. Like in mathematics, it's about a work of discovery. I express myself on this subject here and there throughout Harvests and Sowings. Always is it that, visibly, there has been something to occupy me until the end of my days. And more than once, in effect, have I grown that mathematics, there was the past and that from now on, I have no longer occupied myself with very serious things &mdash; that I have "meditated".<sup>[needs some work]</sup>
 
 I have however finished with making my way to the evidence (for four years) that, even so, the mathematical passion has not been put out. And even, without really knowing how and to my own surprise, me who (after nearly fifteen years) no longer thought to publish another line of mathematics in my life, I saw myself embark suddenly on the writing of a work on mathematics which visibly never ended and which would soon make volumes after volumes; and as much as I was there, I was going to balance that which I believed to have to say about mathematics in an (infinite?) series of books called "Mathematical Reflections", and let's not talk about it anymore.
 
