--- a/recoltes-et-semailles/part-0-letter/4.md
+++ b/recoltes-et-semailles/part-0-letter/4.md
@@ -1,6 +1,6 @@
 ### 4. A wind of the burial
 However, if I have liked to elude thoughout these years the diffuse perception of a large-scale Burial, this did not fail to obstinately remind my good memory, under other faces and less anodyne, than that of a simple disaffection for a work. I knew little by little, I can't really say how, that several notions which were part of the forgotten vision, didn't just fall into disuse, but had become, in a certain high society, object for a condescending disdain. Such was the case, notably, for the crucial unifying notion of topos, at the very heart of the new geometry &mdash; this same which furnishes the common geometric intuition for topology, and algebraic and arithmetic geometry &mdash; this also which allowed me to release as well the tool of étale and $\ell$-adic cohomology, as those master ideas (more or less forgotten since, it is true...) of crystalline cohomology. Indeed, it was even my name, over the years, which insidiously, mysteriously, became object for derision &mdash; like a synonym for infinitely muddy [...] (like those about the famous "toposes", precisely, or the "motives" at which you jam your ears and that no one has ever seen...), for hairsplitting at a length of a thousand pages, and for overabundant and gigantic chatter about that which, in any case, everyone knows already since forever and without waiting for it... [...] "among high-flying people making great company".
 
-In the course of the reflection pursued in Récoltes et Semailles, I believe to have put my finger on profound forces in the work of various people, behind their airs of derision and condescension [...]
+In the course of the reflection pursued in Harvests and Sowings, I believe to have put my finger on profound forces in the work of various people, behind their airs of derision and condescension [...]
 
 Truth be told, these "bursts of discrete derision" which returned to me from here and there, didn't affect me overly. They remained in an anonymous form, even until three or four years ago. There I saw clearly a little uplifting sign of the times, but they didn't [...]
