fill in some gaps early on in the letter

--- a/recoltes-et-semailles/part-0-letter/1.md
+++ b/recoltes-et-semailles/part-0-letter/1.md
@@ -3,7 +3,7 @@
 
 ### 1. The letter of 1000 pages
 
-The letter that I am sending you here, typed and printed in a limited number of copies by the cares of my university, is however neither an offprint, nor a preprint. Its name, Harvests and Sowings, announces this clearly enough. I send it to you as I would send a long letter &mdash; a letter [?] &mdash; If I send it to you, instead of contenting myself that you take knowledge of it one day (if you have the curiosity for it) in some volume on sale in a bookstore (if there is an editor crazy enough to set forth on this venture...), it is because I am addressing it more to you than to others. More than once while writing I have thought about you &mdash; it must be said that it took me more than a year to write it, this letter, by putting myself wholly into it. It is a gift that I send you, and I have taken great care when writing to give that which I have (at each moment) best to offer. I don't know if the gift will be welcomed &mdash; your response (or your non-response...) will let me know...
+The letter that I am sending you here, typed and printed in a limited number of copies by the cares of my university, is however neither an offprint, nor a preprint. Its name, Harvests and Sowings, announces this clearly enough. I send it to you as I would send a long letter &mdash; a very personal letter, moreover &mdash; If I send it to you, instead of contenting myself that you take knowledge of it one day (if you have the curiosity for it) in some volume on sale in a bookstore (if there is an editor crazy enough to set forth on this venture...), it is because I am addressing it more to you than to others. More than once while writing I have thought about you &mdash; it must be said that it took me more than a year to write it, this letter, by putting myself wholly into it. It is a gift that I send you, and I have taken great care when writing to give that which I have (at each moment) best to offer. I don't know if the gift will be welcomed &mdash; your response (or your non-response...) will let me know...
 
 
 At the same time as to you, I am sending Harvests and Sowings to all those of my colleagues, friends or (ex-)students in the mathematical world, to whom I have been closely related at some moment, or who figure in my reflection in one way or another, by name or not. There is a chance that you appear there, and if you read with your heart and not only with your eyes and head, surely you will recognize yourself even there where you are not named. I equally send Harvests and Sowings to some other friends even, scientific or not.
